--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
 <style>
 body {
-  background-color: lightblue;
+  background-image: url("bg.png");
 }
 </style>
 </head>
 <body>
 
-<h1>Hello World!</h1>
-
-<p>This page has a light blue background color!</p>
+<h1>Minting on Solana!</h1>
 
 </body>
 </html>
