--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-image: url("bg.png");
+  background-image: url("build/config/images/bg.png");
 }
 </style>
 </head>
