--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@ body {
 </head>
 <body>
 
-<h1>Minting on Solana!</h1>
-
+<div class="container">
+ <h1 class="text-center">Minting on Solana!</h1>
+    <div class="col-sm">
+        <img src="%PUBLIC_URL%config/images/bg.png" alt="mynftart">
+    </div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
