--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-  background-image: url("build/config/images/bg.png");
-}
+<style> body {background-image: "https://github.com/shades6886/build/blob/master/config/images/bg.png" alt="mynftart" 
+;}
+
 </style>
 </head>
 <body>
 
 <div class="container">
- <h1 class="text-center">Minting on Solana!</h1>
-    <div class="col-sm">
-        <img src="https://github.com/shades6886/build/blob/master/config/images/bg.png" alt="mynftart">
-    </div>
+ <h1 class="text-center">Minting on Solana!</h1>   
 </div>
+
 <script src="script.js"></script>
 </body>
 </html>
