--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style> body {background-image: "https://github.com/shades6886/build/blob/master/config/images/bg.png" alt="mynftart" 
-;}
+<style> body {background-image: "https://github.com/shades6886/build/blob/master/images/bg.png"}
 
 </style>
 </head>
