--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style> body {background-image: "https://github.com/shades6886/build/blob/master/images/bg.png"}
-
-</style>
+    <div class="container">
+        <h1 class="text-center">Minting on Solana!</h1>   
+    </div>
 </head>
 <body>
-
-<div class="container">
- <h1 class="text-center">Minting on Solana!</h1>   
-</div>
-
-<script src="script.js"></script>
+ <div style="background-image: url('https://github.com/shades6886/build/blob/master/images/bg.png')," >
 </body>
-</html>
+</html>                                   
