--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <div class="container">
-        <h1 class="text-center">Minting on Solana!</h1>   
-    </div>
+<style>
+p {
+  background-image: url('bg.png');
+}
+</style>
 </head>
 <body>
- <div style="background-image: url('https://github.com/shades6886/build/blob/master/images/bg.png')," >
+
+<h2>Minting on Solana</h2>
+
+<p>100 cornhole boards<br>
+
+
 </body>
-</html>                                   
+</html>
