--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <style>
 p {
-  background-image: url('bg.png');
-}
+  background-image: url('https://github.com/shades6886/build/blob/a5fb1f6f8ff5c6d7db473721b76700ea1fdb95d7/images/bg.png');
+} 
+
 </style>
 </head>
 <body>
