--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <title>Nerdy Coder Clones</title>
     <meta name="description" content="Mint your Cornholio" />
   </head>
+  <index>
+    body {
+    background-image: 
+url('https://media.githubusercontent.com/media/JackTimelessPiece/Website/master/gifs/bg.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 0 0 100px; /* bottom = footer height 
+
+    }
+  </index>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
