--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <index>
     body {
     background-image: 
-url('https://media.githubusercontent.com/media/JackTimelessPiece/Website/master/gifs/bg.png');
+url('https://github.com/shades6886/build/blob/a5fb1f6f8ff5c6d7db473721b76700ea1fdb95d7/images/bg.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: 0 0 100px; /* bottom = footer height 
